<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="144dp"
        app:srcCompat="@drawable/modulelearning" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textColor="#16BA11"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="177dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/lesson5image" />

        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/modules"
                android:textColor="@android:color/holo_orange_light"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp" />

            <TextView
                android:id="@+id/textViewAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/android" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textViewItService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/itservice" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/data" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textViewFYP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/fyp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/rpstudents" />

    </LinearLayout>

</LinearLayout>